CHANGELOG
=========
  2004-03-18
  ==========
    * Finished changing bMotion to IMP where relevent
    * Fixed the bug mentioned here: http://tinyurl.com/2wtwn
    * Added plugins/en/simple_sing.tcl


  2004-03-11
  ==========
    * Initial fork from bMotion CVS.